2013-01-01  Stefan Sauer  <ensonic@users.sf.net>

	* configure.ac:
	  Update autofoo.

2012-08-13  Stefan Sauer  <ensonic@users.sf.net>

	* configure.ac:
	  Add check for AR to fix the build.

2012-07-26  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	  Remove leftover from debugging.

2012-04-05  Stefan Sauer  <ensonic@users.sf.net>

	* Geonik/BuzzMachines/Mandpluk.h:
	  Convert the header to use short values instead of the hex
	  representation of the 2-complements (which contains values that are
	  out of of range for short).

	* Geonik/BuzzMachines/PrimiFun.cpp:
	  Fix struct<->class warning.

2012-04-04  Stefan Sauer  <ensonic@users.sf.net>

	patch by: Joe Pea <trusktr@gmail.com>

	* common/MachineInterface.h:
	  Revert modifications from machineinterface

2012-03-18  Stefan Sauer  <ensonic@users.sf.net>

	* TODO:
	  Add testing ideas.

2012-03-01  Stefan Sauer  <ensonic@users.sf.net>

	* FSM/Philta/Filters.cpp:
	* FSM/Philta/Makefile.am:
	* FSM/Philta/Filters.cpp (added):
	  Add missing filter implementation.

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Oomek/Aggressor/303.cpp:
	  Fix buffer overflow.
	* Oomek/Aggressor/fft.h:
	  Make fft func static.

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* FrequencyUnknown/O-Delay/O-Delay.cpp:
	  Fix gcc error
 	  "operation on ‘((mi*)this)->mi::lrbpos’ may be undefined"
	  [-Werror=sequence-point]

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Ld/Gate/Makefile.am:
	* Oomek/Makefile.am:
	* Ld/Gate/Makefile.am (added):
	* Oomek/Makefile.am (added):
	  Add missing makefiles.

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	  Add Oomek to the build.

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* HACKING:
	  Update todo list

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Zwar/11Stereo/Makefile.am:
	  Install song.
	  
	* Oomek (added):
	* Oomek/Exciter (added):
	* Oomek/Exciter/Exciter.int.cpp (added):