@@ -27,6 +27,7 @@
 #include <windef.h>
 
 #include <MachineInterface.h>
+#include "../dspchips/DSPChips.h"
 
 double const SilentEnough = log(1.0 / 32768);
 
@@ -381,14 +382,6 @@ void mi::Tick()
 #pragma optimize ("a", on) 
 
 #define INTERPOLATE(pos,start,end) ((start)+(pos)*((end)-(start)))
-
-inline int f2i(double d)
-{
-	const double magic = 6755399441055744.0; // 2^51 + 2^52
-	double tmp = (d-0.5) + magic;
-	// return *(int*) &tmp;
-    return (int)tmp;
-}
 
 static void DoWork(float *pin, float *pout, mi *pmi, int c, CTrack *trk)
 {
