@@ -1,3 +1,8 @@
+2013-01-06  Stefan Sauer  <ensonic@users.sf.net>
+
+	* FSM/Chorus/Chorus.cpp:
+	  Fix rounding by using the right version from dspchips.h.
+
 2013-01-01  Stefan Sauer  <ensonic@users.sf.net>
 
 	* configure.ac:
